# sumireko

./: .envrc  .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  shell.nix
app/: __init__.py  legacy.py  main.py
app/audio/: router.py
app/common/: algos.py  exceptions.py  logger.py  state.py  utils.py
app/images/: __init__.py  router.py
app/postgres/: __init__.py
app/text/: router.py
common/: image.py
requests/: audio-search-pgvector.sh  audio-search.sh  image-search-pgvector.sh  image-search.sh  text-search.sh
scripts/: __init__.py  binary_index.py  check_binary_index.py  init_postgres.py  preprocess_audios.py  preprocess_images.py  preprocess_texts.py  shared.py
shared/: __init__.py  text.py  types.py  utils.py
shared/text/: __init__.py  index.py  processing.py  spimi.py
spimi_cpp/: .clangd  main.cpp
tests/: lib.py  main.py  media.py  text.py
