[project]
name = "sumireko"
version = "0.1.0"
description = "Proyecto final de BD2"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu",
    "fastapi[standard]",
    "librosa",
    "nltk",
    "numpy",
    "opencv-python-headless",
    "psycopg",
    "psycopg-pool",
    "python-multipart",
]

[build-system]
requires = [
    "setuptools",
    "pybind11",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["app*", "shared*"]
